<resources>
    <string name="app_name">Todo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="new_task">New Task</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">Checkbox</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_login">Please Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>